--- a/exchange-processing/src/main/resources/application.yml
+++ b/exchange-processing/src/main/resources/application.yml
@@ -1,15 +1,22 @@
 spring:
+
+  profiles:
+    active: cloud
+
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: none
+
   application:
     name: exchange-processing
+
   datasource:
     url: jdbc:postgresql://localhost:5433/exchanger
     driver-class-name: org.postgresql.Driver
     password: pass
     username: postgres
+
   liquibase:
     url: jdbc:postgresql://localhost:5433/exchanger
     password: pass
@@ -18,7 +25,13 @@ spring:
 
 service:
   currency:
-    url: "http://localhost:8085"
+    url: http://localhost:8090
+
+eureka:
+  client:
+    enabled: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
 
 server:
   port: 8090
