--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: cloud
+
   application:
     name: currency-converter
 
@@ -8,3 +11,9 @@ server:
 currency:
   client:
     url: "http://www.cbr.ru/scripts/XML_daily.asp"
+
+eureka:
+  client:
+    enabled: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
